welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: value unary_! is not a member of Unit
  while (!setPos(6,6)){
         ^ZigZag:7: error: not found: value k
      setPos(i,k)
               ^